--- a/Portfolio/layouts/partials/header.html
+++ b/Portfolio/layouts/partials/header.html
@@ -39,7 +39,7 @@
 </script>
 {{- end }}
 
-<header class="header sticky-header">
+<header class="header">
     <nav class="nav">
         <div class="logo">
             {{- $label_text := (site.Params.label.text | default site.Title) }}
